chore: best-pratice tweaks

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "drawboard",
   "version": "0.1.0",
-  "homepage": "https://ParamjotSingh5.github.io/Drawboard",
+  "homepage": "https://ParamjotSingh5.github.io/drawboard",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.14.0",
